# glodex-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  compose.yaml  pyproject.toml  requirements.txt  项目需求与架构.md
app/: __init__.py
app/agent/: __init__.py  dispatch_tool.py  fork.py  fork_guard.py  llm.py  main_agent.py  middleware.py  prompts.py  state.py  toolset.py
app/api/: __init__.py  connection.py  context.py  monitor.py  schemas.py  server.py  task_manager.py
app/compress/: __init__.py
app/eval/: __init__.py
app/harness/: __init__.py  bootstrap.py  decorators.py  langchain_adapter.py  pipeline.py  tool_result_store.py  types.py
app/history/: __init__.py  store.py
app/ingest/: env.py  (+11 more)
docs/: 01-Agent架构设计.md  02-技术栈与依赖清单.md  03-AGUI事件与WebSocket推送.md  04-通用工具.md  05-电商工具.md  06-记忆系统.md  06_phase1_统一工具结果截断入口.md  06_phase_next_QwenPaw轻量优化候选.md  07-LangChain与LangGraph API使用说明.md  09-工具清单.md  10-ItemSearch工具设计.md  11-ItemSearch当前实现.md  11-PriceCompare工具设计.md  12-CategoryInsight工具设计.md  13-ItemPicker与ShoppingSummary工具设计.md  14-AgentLoop防失控设计.md  15-商品数据采集与标准化.md  16-Spider采集与多模态Attributes方案.md  17-QwenPaw记忆系统调研与Glodex重构方案.md  18-Harness-Hook基础知识.md  19-Pi风格Agent分层架构.md  PRD-Glodex-Agent.md  福利站AI助手接入方案.md  记忆.md
fronted/: index.html  package-lock.json  package.json
tests/: test_agent_runtime.py  test_harness_history_hooks.py  test_harness_memory_hooks.py  test_history_api.py  test_history_store.py  test_langfuse_hooks.py  test_langfuse_observability.py  test_memory_compressor.py  test_session_memory.py  test_tool_result_store.py
(+51 files in other folders)
