[project]
name = "glodex-agent"
version = "0.1.0"
description = "Glodex Agent - cross-platform ecommerce selection and price comparison multi-agent system"
requires-python = "==3.12.3"
dependencies = [
    "langgraph==1.2.6",
    "langchain==1.3.10",
    "langchain-openai==1.3.2",
    "openai==2.43.0",
    "fastapi==0.115.14",
    "uvicorn[standard]==0.34.3",
    "pydantic==2.10.6",
    "httpx==0.28.1",
    "python-dotenv==1.0.1",
]
